# uAssetRipper

./: CMakeLists.txt  README.md  UnityAssetObjRipper.py  launch.vs.json
UnityAssetRipper/: Asset.cpp  Asset.h  CMakeLists.txt  Main.cpp
